# ItlwmCLI

./: .gitattributes  .gitignore  .gitmodules  Api.h  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  main.cpp
.github/workflows/: build.yml  buildlegacy.yml
Legacy/: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
